--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,23 @@
     tools:context="example.codeclan.com.playyourcardsright.MainActivity">
 
     <ImageView
-        android:id="@+id/nextCard"
-        android:layout_width="91dp"
-        android:layout_height="121dp"
-        android:layout_marginBottom="192dp"
-        android:layout_marginStart="144dp"
+        android:id="@+id/firstCard"
+        android:layout_width="100dp"
+        android:layout_height="140dp"
+        android:layout_marginBottom="184dp"
+        android:layout_marginStart="16dp"
+        android:contentDescription="First card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <ImageView
-        android:id="@+id/firstCard"
-        android:layout_width="91dp"
-        android:layout_height="121dp"
-        android:layout_marginBottom="192dp"
-        android:layout_marginStart="28dp"
+        android:id="@+id/nextCard"
+        android:layout_width="100dp"
+        android:layout_height="140dp"
+        android:layout_marginBottom="184dp"
+        android:layout_marginStart="128dp"
+        android:contentDescription="Next card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
@@ -30,8 +32,9 @@
         android:id="@+id/card3"
         android:layout_width="70dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="124dp"
+        android:contentDescription="Card 3, downturned"
         app:layout_constraintBottom_toBottomOf="@+id/nextCard"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/red_back" />
@@ -40,9 +43,9 @@
         android:id="@+id/card4"
         android:layout_width="70dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginEnd="52dp"
-        app:layout_constraintBottom_toBottomOf="@+id/nextCard"
+        android:layout_marginEnd="64dp"
+        android:contentDescription="Card 4, downturned"
+        app:layout_constraintBottom_toBottomOf="@+id/card3"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/red_back" />
 
@@ -50,9 +53,40 @@
         android:id="@+id/card5"
         android:layout_width="70dp"
         android:layout_height="101dp"
-        android:layout_marginBottom="12dp"
-        app:layout_constraintBottom_toBottomOf="@+id/nextCard"
+        android:layout_marginEnd="4dp"
+        android:contentDescription="Card 5, downturned"
+        app:layout_constraintBottom_toBottomOf="@+id/card4"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/red_back" />
+
+    <ImageButton
+        android:id="@+id/refreshButton"
+        android:layout_width="48dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstCard"
+        app:srcCompat="@drawable/refresh_button" />
+
+    <ImageButton
+        android:id="@+id/higherButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="180dp"
+        app:layout_constraintBottom_toTopOf="@+id/nextCard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/up_button" />
+
+    <ImageButton
+        android:id="@+id/lowerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="180dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nextCard"
+        app:srcCompat="@drawable/down_button" />
 
 </android.support.constraint.ConstraintLayout>
