Win message shown. Cards moved. Bare bones look.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,4 +94,16 @@
         app:srcCompat="@drawable/down_button"
         tools:tag="lower" />
 
+    <ImageButton
+        android:id="@+id/winMessage"
+        android:layout_width="352dp"
+        android:layout_height="509dp"
+        android:onClick="onWinMessageClick"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/tick_2" />
+
 </android.support.constraint.ConstraintLayout>
