Room db added for LeaderBoard. It appears to be returning LeaderEntry objects.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
 
     <ImageButton
         android:id="@+id/refreshButton"
+        android:background="@android:color/transparent"
         android:layout_width="48dp"
         android:layout_height="44dp"
         android:layout_marginStart="44dp"
@@ -85,8 +86,9 @@
         android:id="@+id/higherButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="208dp"
+        android:background="@android:color/transparent"
         android:onClick="onHigherLowerButtonClick"
         app:layout_constraintBottom_toTopOf="@+id/nextCard"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,8 +99,9 @@
         android:id="@+id/lowerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="180dp"
+        android:layout_marginEnd="208dp"
         android:layout_marginTop="24dp"
+        android:background="@android:color/transparent"
         android:onClick="onHigherLowerButtonClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nextCard"
@@ -109,7 +112,9 @@
         android:id="@+id/messageBox"
         android:layout_width="352dp"
         android:layout_height="206dp"
+        android:adjustViewBounds="false"
         android:onClick="onMessageClick"
+        android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
