--- a/app/src/main/res/layout/activity_board_entry.xml
+++ b/app/src/main/res/layout/activity_board_entry.xml
@@ -8,12 +8,12 @@
 
     <ImageView
         android:id="@+id/backgroundImage"
-        android:layout_width="379dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -25,6 +25,8 @@
         android:layout_height="91dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="84dp"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/editNameText"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,7 +40,8 @@
         android:layout_marginBottom="244dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,7 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:onClick="onEnterTextButtonClick"
-        android:text="Button"
+        android:text="ADD"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNameText" />
