--- a/app/src/main/res/layout/activity_delete_board_item.xml
+++ b/app/src/main/res/layout/activity_delete_board_item.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context="example.codeclan.com.playyourcardsright.DeleteBoardItemActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/green_background" />
+
     <Button
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
@@ -19,10 +30,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="144dp"
-        android:layout_height="53dp"
+        android:layout_width="154dp"
+        android:layout_height="92dp"
         android:layout_marginTop="115dp"
-        android:text="Delete item?"
+        android:text="Delete this leaderboard entry?"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
@@ -42,4 +53,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </android.support.constraint.ConstraintLayout>
