--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,12 @@
         android:id="@+id/firstCard"
         android:layout_width="100dp"
         android:layout_height="140dp"
-        android:layout_marginBottom="184dp"
+        android:layout_marginBottom="216dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:contentDescription="First card"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -32,10 +34,11 @@
         android:id="@+id/nextCard"
         android:layout_width="100dp"
         android:layout_height="140dp"
-        android:layout_marginBottom="184dp"
-        android:layout_marginStart="128dp"
+        android:layout_marginBottom="216dp"
+        android:layout_marginStart="116dp"
         android:contentDescription="Next card"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
@@ -72,11 +75,11 @@
 
     <ImageButton
         android:id="@+id/refreshButton"
-        android:background="@android:color/transparent"
         android:layout_width="48dp"
         android:layout_height="44dp"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:color/transparent"
         android:onClick="onChangeCardButtonClick"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstCard"
