--- a/app/src/main/res/layout/leaderboard_item.xml
+++ b/app/src/main/res/layout/leaderboard_item.xml
@@ -10,18 +10,22 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="237dp"
-        android:layout_height="69dp"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/roundCompleted"
         android:layout_width="73dp"
-        android:layout_height="68dp"
+        android:layout_height="50dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:textColor="@android:color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/name" />
