--- a/app/src/main/res/layout/activity_delete_board_item.xml
+++ b/app/src/main/res/layout/activity_delete_board_item.xml
@@ -21,18 +21,18 @@
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="128dp"
+        android:layout_marginBottom="256dp"
+        android:layout_marginRight="72dp"
         android:onClick="onDeleteButtonClick"
         android:text="DELETE"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="154dp"
         android:layout_height="92dp"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="48dp"
         android:text="Delete this leaderboard entry?"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -52,6 +52,21 @@
         app:layout_constraintBottom_toTopOf="@+id/deleteButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.077" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="256dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="72dp"
+        android:onClick="onCancelButtonClick"
+        android:text="CANCEL"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
