--- a/app/src/main/res/layout/activity_board_entry.xml
+++ b/app/src/main/res/layout/activity_board_entry.xml
@@ -19,14 +19,28 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/green_background" />
 
+    <ImageView
+        android:id="@+id/fireworks"
+        android:layout_width="315dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/backgroundImage"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/fireworks" />
+
     <TextView
         android:id="@+id/boardEntryMessage"
-        android:layout_width="221dp"
-        android:layout_height="91dp"
+        android:layout_width="297dp"
+        android:layout_height="190dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="84dp"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/editNameText"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
