--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,12 +21,24 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/green_background" />
 
+    <ImageView
+        android:id="@+id/stars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/stars" />
+
     <Button
         android:id="@+id/fiveCardGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="172dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="208dp"
         android:onClick="onGameButtonClick"
         android:text="Five Cards"
         android:textColor="@android:color/black"
@@ -38,18 +50,15 @@
         android:id="@+id/fullPackGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="165dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onGameButtonClick"
         android:text="Full Deck"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/fiveCardGame"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fiveCardGame"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintStart_toEndOf="@+id/fiveCardGame" />
 
     <Button
         android:id="@+id/leaderboardButton"
