--- a/app/src/main/res/layout/activity_board_entry.xml
+++ b/app/src/main/res/layout/activity_board_entry.xml
@@ -63,13 +63,14 @@
 
     <Button
         android:id="@+id/enterText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="77dp"
+        android:layout_height="48dp"
         android:layout_marginTop="68dp"
         android:onClick="onEnterTextButtonClick"
         android:text="ADD"
         android:textColor="@android:color/black"
         android:textSize="24sp"
+        android:visibility="visible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNameText" />
