--- a/app/src/main/res/layout/activity_board_entry.xml
+++ b/app/src/main/res/layout/activity_board_entry.xml
@@ -70,7 +70,7 @@
         android:text="ADD"
         android:textColor="@android:color/black"
         android:textSize="24sp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNameText" />
