Rules added. String resource not formatting properly, but not broken.

--- a/app/src/main/res/layout/activity_board_entry.xml
+++ b/app/src/main/res/layout/activity_board_entry.xml
@@ -36,28 +36,29 @@
     <TextView
         android:id="@+id/boardEntryMessage"
         android:layout_width="297dp"
-        android:layout_height="190dp"
+        android:layout_height="238dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="84dp"
         android:textColor="@android:color/black"
-        android:textSize="30sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/editNameText"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/editNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="244dp"
+        android:layout_marginBottom="228dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
