--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,20 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/green_background" />
 
+    <Button
+        android:id="@+id/leaderboardButton"
+        android:layout_width="155dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="244dp"
+        android:layout_marginStart="40dp"
+        android:onClick="onLeaderboardButtonClick"
+        android:text="Leaderboard"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/stars"
         android:layout_width="wrap_content"
@@ -61,19 +75,17 @@
         app:layout_constraintStart_toEndOf="@+id/fiveCardGame" />
 
     <Button
-        android:id="@+id/leaderboardButton"
+        android:id="@+id/rulesButton"
         android:layout_width="155dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="212dp"
-        android:onClick="onLeaderboardButtonClick"
-        android:text="Leaderboard"
-        android:textColor="@android:color/black"
+        android:layout_marginBottom="244dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="16dp"
+        android:onClick="onRulesButtonClick"
+        android:text="Rules"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
